--- a/_posts/thesis_chapters/2025-3-5-Design.md
+++ b/_posts/thesis_chapters/2025-3-5-Design.md
@@ -392,6 +392,8 @@ Chapter 2 reviewed research on using collections of gameplay design patterns to 
 
 Table 5.x Categorisation of game design patterns used in P4.
 
+These elements were themed in a way which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2. The evolution and of this theming is outlined in more detail in Appendix.tech.gameframework.
+NOTE - DEVELOP THIS A BIT AS IT IS EXPLORED IN CHAPTER 6. 
 
 This section outlined two key types of secondary support tools developed in response to tensions arising after introducing the primary tools discussed in the previous section. While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in Vignette 6.1), the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features, suggesting an enhancement in their instrumental agency. In addition, participants' increase in agency extends beyond just instrumental application. In both P1 and P2, participants made specific requests for new features, which, when deemed suitable by me as the facilitator, were added to the menu of game design patterns. This choice-driven approach can be seen as both relational and authorial agency within the framework discussed in Chapter 3.
 
