--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -550,8 +550,30 @@ Following Rogoff's [@rogoff_observing_1995] three planes approach to analysis, t
 
 ### The role of GDPs to facilitate learners to design for others
 
-The use of GDPs, particularly during playtesting, can support the process of imagining end-user experiences. This section examines how the concept of, and experience with, implementing GDPs encouraged participants to envision the experience of end users of their games. Chapter two explored the proposition from professional and participatory design processes that design should be informed by end-user experience [@redstrom_towards_2006], as well as the challenges involved in undertaking such an *"operationalization of empathy"* [@surma-aho_conceptualization_2022, p.1]. From a CHAT interpretation, this process involves shifts in perspective by participants as they engage with objectives across different scopes of activity. For instance, in the vignette above, Tehillah (child) pursues a quirky design goal during her paired design work, which Susanna (parent) resists. Imagining a shift in perspective to the intended audience at a community level of interaction, the parent aims to ensure a sense of challenge for the imagined player.
+The use of GDPs, particularly during playtesting, can support the process of imagining end-user experiences. This section examines how the concept of, and experience with, implementing GDPs encouraged participants to envision the experience of end users of their games. Chapter two explored the proposition from professional and participatory design processes that design should be informed by end-user experience [@redstrom_towards_2006], as well as the challenges involved in undertaking such an *"operationalization of empathy"* [@surma-aho_conceptualization_2022, p.1]. From a CHAT interpretation, this process involves shifts in perspective by participants as they engage with objectives across different scopes of activity.
 
+
+
+
+For instance, in the vignette below, Tehillah (child) pursues a quirky design goal during her paired design work, which Susanna (parent) resists. Imagining a shift in perspective to the intended audience at a community level of interaction, the parent aims to ensure a sense of challenge for the imagined player.
+
+THIS IS EXPLORED ABOVE - MOVE THIS TABLE?
+
+
+|**Dialogue**|**Activity**|
+|:----|:----|
+| Susanna Are you putting one in your third level as well?                                                                                |                                                                                                             |
+| Tehillah: Yes and then I’m going to make more levels                                                                                    | Tehillah Smiles at Susanna and then looks away for a short while                                            |
+| Tehillah: You do this bit                                                                                                               |                                                                                                             |
+| Tehillah: And then delete those H’s. And in there.                                                                                      |                                                                                                             |
+| Susanna No. No.                                                                                                                         |                                                                                                             |
+| Tehillah: Then, let me do it.                                                                                                           | (off screen) Tehillah takes over the keyboard                                                               |
+| Susanna It’s no fun having a game with any hazards to avoid.                                                                            |                                                                                                             |
+| Tehillah: It is for me!<br>How do you go that way back?<br>So sorry for deleting…<br>They just…                                         | (on screen) Tehillah deletes hazards in Level 3 of game                                                     |
+| Back Back Back<br>O O O.<br>Back O (giggles)                                                                                            | (laughs) replaces another)<br>(on screen) Tehillah adds three coins to Level 3 by inserting o in the matrix |
+| Susanna: Goodness me what was the point of designing our car with fumes if we’re not going to use it?<br>Tehillah: I don’t know (sighs) |                                                                                                             |
+
+Susanna(p)'s alarm at the child's deletion of all elements of hazard shows she has too keen a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." The child seems determined to remove all hazards. My understanding is that she is also aware of implications for game balance but is taking pleasure in this act of creative transgression of convention. In contrast other participants created extremely challenging or impossible game levels that frustrated other players.
 
 
 Susanna shares *"Must be quite hard to get through that door."* when Tehillah places the exit door high above a platform. She then continues, *“It’s no fun having a game without any hazards to avoid.”* Tehillah (child) seems determined to remove all hazards. *"It is for me!"* she counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play.  However, a later interaction with a peer shows that Tehillah (child) is indeed imagining the experience of the immediate audience of fellow game makers and supporting students. *"I like making it frustrating. That other people find it frustrating!"* Tehillah (child) notes the persistence of a student helper who pushes past her frustration to complete the game. Her remark, *"If people tried hard they would get to my level,"* shows her awareness that not all players will persist in the same way to reach her final level, which has only rewards and no hazards. This being a *"secret, special"* experience, which plays against the norms of platform game design, is thus intended to provoke player surprise.
@@ -566,7 +588,7 @@ One is just to make a playable game experience which by design involves an imagi
 <!--emonstrates norming behaviour towards Madiha(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Madiha to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the pl
 NOTE #### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) - -->
 
-There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players. The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette.challenge outlines a key interaction which demonstrates norming behaviour towards Madiha(p) who has concentrated on the graphics of her game to the detriment of the level of challenges. In particular, the controls of the game are frustrating. The vignette shows varied attempts to influence Madiha to change the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Madiha directly to change the game, these comments appear to direct the direction of the design to comply with an emerging community norm of how a player jumps should feel, stemming from the participants' feedback on the feeling of lack of control over the player's character in the game. These behaviours are some of the informal norming behaviours that are less directive, seen in the work of Rogoff and colleagues, as explored in the literature review [@rogoff_cultural_2003].
+
 
 <!-- OTHER DATA? INSERT VIDEO DATA SUPPORT
 E.g. The use of GDPs to facilitate learners to design for others was present in 6 of the 12 video capture sessions analysed. -->
@@ -580,19 +602,37 @@ The examples explored above serve to highlight two dimensions of the use of GDP 
 
 ### GDPs can facilitate the use of wider funds of knowledge and interest
 
-THIS NEEDS TO BE MUCH MORE GROUNDED IN DATA - MOVE THEORY OUT
+<!-- THIS NEEDS TO BE MUCH MORE GROUNDED IN DATA - MOVE THEORY OUT -->
 
-GDPs can allow participants to share and explore funds of knowledge and interest in the emerging learning community. One premise driving my exploration of the use of gameplay features in pedagogy is that the tacit knowledge of gaming conventions among most family members is extensive, even if they are not avid gamers, due to the extensive influence of video game culture in mainstream culture, including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], particularly retro gaming [@heineman2014public]. As such, the process of facilitating ways to surface and work with such tacit knowledge aligns with Moll's concept of funds of knowledge, and, potentially, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014]. Within a CHAT framework, these funds of identity and knowledge can be seen as tools that facilitate the transfer of potentially useful concepts and practices across the boundaries between activity systems, in this case, between home activity and that happening in this game-making community. The associated inclusive benefits of working with participants' home interests are explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008]. Existing research outlines the motivations for social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets and narratives, which sustain engagement in digital making projects [@sefton-green_mapping_2013].
+Existing research outlines the motivations for social making incorporating gaming cultural elements [@ito_hanging_2010; @gee_what_2003] and the ability to make personalised game assets and narratives, which sustain engagement in digital making projects [@sefton-green_mapping_2013]. GDP concepts allow participants to share and explore funds of knowledge and interest [@fasso_identity_2020; @esteban-guitart_funds_2014] related to gaming culture [@ito_hanging_2010; @livingstone_digital_2018] in the emerging learning community. Research related to project based learning (PBL) benefits of working with participants' home interests with project work include to motivate participants in initial stages [@swirski_does_2018-1; @penuel_connecting_2022], sustain activity and overcome problems in order to share the personalised object created [@barron_conceptualizing_2010; @barron_interest_2006-1].
+
+Given the gap in research for appropriate frameworks to facilitate the process of allowing participants to explore FoK cited in Chapter 2, I propose that GDPs are a suitable framework to facilitate a choice based approach in this domain. In addition, the subdivision of GDPs using the MDA mechanics, dynamics, and aesthetics) framework (see Ch.2 and Glossary) as a way of providing varied learning pathways and thus align with characteristics of inclusive pedagogy (UDL) [@sanger_inclusive_2020].
+
+The different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests. This point is well illustrated via the domain of polish/aesthetics in Vignette 5, where Madiha and Nasrin show identification with the graphical-making process and the process of bringing that aspect of creativity into their games. Beyond their internal family interaction, they share this artistic flair and attention to detail with the emerging learning community.
 
 
-In the last chapter, I outlined processes facilitating participants in creating and incorporating graphical, audio assets, and narrative elements into their games, and, referencing Appendix.tech.gameframework, briefly outlined how these elements were themed as Game Polish items within a typology of GDPs, which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2. The different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests. This point is well illustrated via the domain of polish/aesthetics in Vignette 5, where Madiha and Nasrin show identification with the graphical-making process and the process of bringing that aspect of creativity into their games. Beyond their internal family interaction, they share this artistic flair and attention to detail with the emerging learning community. Another pair Clive and Pearl, the grandparents of Toby, included a narrative message at the start of their game surfacing the interest and expertise of the family as beekeepers (see V6). This sparked interesting conversations with other participants.
+Another pair Clive and Pearl, the grandparents of Toby, included a narrative message at the start of their game surfacing the interest and expertise of the family as beekeepers (see V6). This sparked interesting conversations with other participants.
 
-In addition to issues of aesthetics, home knowledge of game mechanics and dynamics (the M and D of the MDA framework) also contributed to emerging cultural repertoires. As explored in the previous section, Vignette 4 gives several examples of participant feedback on the dynamics of Madiha's game in the level of the challenge experienced by players. Peers shared their experience of what makes a good game to bear in the feedback they shared. Turning to the area game mechanics, In see V1.b Bertie(c) comments on Toby(c)'s game, which has a dominant game experience of timed jumping: *"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"*. Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics. Thus, the tacit knowledge of GDPs of children and adults as game players serves them in knowledge-brokers roles in the process of feeding back and ideation [@wenger_communities_1998].
+In addition to issues of aesthetics, home knowledge of game mechanics and dynamics (the M and D of the MDA framework) also contributed to emerging cultural repertoires.
 
-I  propose that this use of the MDA framework as a way of providing varied learning pathways has potential to aid facilitators to align with existing inclusive pedagogy, a point I explore in more detail in the discussion section.
 
-EDIT DOWN OR SAY HOW IT EXTENDS
-Thus observations from video data in this study support existing research which highlight the motivating potential of incorporating home interests in games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. They also support findings of other research on the use of funds of knowledge and interest in digital projects as motivating factors and as a way to overcome barriers to alien cultures [@gutierrez_learning_2019-1; @moje2001maestro]. This research also aligns with PBL research that indicates that allowing participants to incorporate home interests can be highly motivating both in initial stages [@swirski_does_2018-1; @penuel_connecting_2022], and to sustain activity and overcome problems in order to share the personalised object created [@barron_interest_2006].
+As explored in the previous section, Vignette 4 gives several examples of participant feedback on the dynamics of Madiha's game in the level of the challenge experienced by players. Peers shared their experience of what makes a good game to bear in the feedback they shared. Turning to the area game mechanics, In see V1.b Bertie(c) comments on Toby(c)'s game, which has a dominant game experience of timed jumping: *"It’s like parkour in Minecraft but timed. It’s like playing the game Wipeout. Have you ever played Wipeout?"*. Parkour in Minecraft and Wipeout are both game experiences whose main gameplay mechanic is about judging jumps and landing accurately. Bertie makes links to his existing experience of games, making comparisons between Toby's game, commercial games, and his own. In doing so, Bertie is able to show his knowledge and analysis of gameplay patterns. Additionally, the guidance of Dan(p) for Toby(c) explored above in Vignette 7, saw the parent explicitly drawing out the child's home knowledge of games to enable an exploration of a different set of game mechanics. Thus, the tacit knowledge of GDPs of children and adults as game players serves them in knowledge-brokers roles in the process of feeding back and ideation [@wenger_communities_1998].
+
+
+
+The previous examples have outlined how participants used GDPs in  incorporating graphical, audio assets, and narrative elements into their games.  In Chapter 5 and Appendix.tech.gameframework I outlined the use of the MDA (mechanics, dynamics, and aesthetics) framework to theme the presentation of GDPs. I propose that this subdivision of GDPs scaffolds participants to elect to follow varied learning pathways based on their home interests in a way which  align with characteristics of the inclusive pedagogy universal design for learning (UDL) [@sanger_inclusive_2020]. Specifically, providing resources which allow exploration of  providing multiple means of engagement with the learning process
+
+The MDA framework can be profitably examined from the perspective of superficial and underlying characteristics of game elements. Thus those less intrinsically interested in the game play feel or challenge can engage with aspects of the game more aligned to other media projects in terms of the cast of characters the narrative of the game or the aesthetics of the graphical or audio design of the work.
+
+
+DVELOP THIS A BIT OR LINK TO ANOTHER BIT EXPLORING THIS
+
+![Illustration 6.x - MDA as an additional framework promoting multiple means of engagement  ](./Pictures/ch_6_mda_dia_1.png){width=85%}
+
+
+These findings align with existing constructivist research which highlight the motivating potential of incorporating home interests in games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]; @kafai_constructionist_2015, and socio-cultural research on the tactical use of FoK to overcome barriers to technical environments [@gutierrez_learning_2019-1; @moje2001maestro]. While existing work on computational design patterns by Repenning et al.  [@repenning_scalable_2015] addresses the value of progressive scaffolding to support the engagement of learners, it does not address any aspect of choice when of drawing on FoK when creating games.
+
+As such, the use of GDPs collection here and within that a careful structuring of patterns using and adapted MDA framework () facilitating participants to follow different strands of home interests is a significant contribution to the design knowledge with in CGD&P.
 
 
 
@@ -619,7 +659,7 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 
 
 
-### Evolution and propagation of GDPs concepts during playtesting
+### Evolution and propagation of GDPs concepts
 
 <!-- NOTE NOT PLAYTESTING THAT IS IMPORTANT HERE - INSTEAD THE ROLE AND NATURE OF GDPS TO AID PROPAGATION -->
 <!-- NOTE THIS includes NON TEMPLATED GDPs? -->
@@ -627,9 +667,9 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 <!-- While GDPs were often demanded by pairs or individuals, and then in P2 a menu of suggested GDPs introduced by had a role, there is a community dimension in the way participants worked with the concepts and the concrete implementation of GDPs.   -->
 <!-- In addition to the names of patterns as a lingua franca to comment on games during the process of playtesting, participants also    -->
 
-Within the emerging idioculture of the game-making sessions, and during playtesting in particular, the implementation of popular or novel GDPs by participant pairs or individuals is often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants, enriching the games of participants. At times, participants were influenced by playing the games of others, and at times, they would request the direct help of peers to implement GDPs in their own games.
+The implementation of popular or novel GDPs by participant pairs or individuals is often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants, enriching the games of participants. At times, participants were influenced by playing the games of others, and at times, they would request the direct help of peers to implement GDPs in their own games.
 
-As the process of playtesting emerged, community norms began to develop, some of which were influenced by home experience of game playing. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game. In Vignette 1B, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels onto yours?"_ The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
+
 
 
 <!-- Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics. -->
@@ -645,50 +685,102 @@ As the process of playtesting emerged, community norms began to develop, some of
 <!-- **New GDPs emerged from existing patterns through peer activity during playtesting** -->
 <!-- DEVELOP -->
 
-In addition to the propagation of GDPs offered in the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community. The concept of a safe zone in the game of Pearl and Clive arrived as a direct result of adding many _moving enemies_ in a way that it became essential for players to quickly identify and use 'safe zones' where enemies did not reach. As such, this concept, not used in any facilitator provided resources, became used frequently in the playtesting of that game.
 
-In another example, Tehillah's concept of a level that eschews challenge and offers only rewards emerged through playful experimentation (see Vignette 2). Susanna(p)'s alarm at the child's deletion of all elements of hazard shows she has too keen a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." The child seems determined to remove all hazards. My understanding is that she is also aware of implications for game balance but is taking pleasure in this seeming destruction of the key challenge of the game as an act of disruptive play. Other players also created impossible or overly easy game levels. They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001].
 
-These novel concepts may have emerged spontaneously or have a source in part from participants' funds of gaming knowledge. In either case, once a concept like that of safe zone enters the linguistic and coding repertoire of this community of game makers, it facilitates propagation based on the interest of other participants.
+Turnign to evolution of patterns, the concept of a safe zone in the game of Pearl and Clive arrived as a direct result of adding many _moving enemies_ in a way that it became essential for players to quickly identify and use 'safe zones' where enemies did not reach. This novel is concept, became used frequently in the playtesting of that game and that of others.
+
+The data shows other examples of organic emergence of novel GDPs and related design concepts  beyond those offered in the menu of supporting documentation. Tehillah's concept of a level that eschews challenge and offers only rewards (see Vignette 2 and table above) emerged through playful experimentation. While this idea was  experimental and novel for the child and was not included in the scope of presented patterns, the idea exists in popular platform games (see Flicky and Super Mario Brs). ANY COMMENT?
+
+In contrast other participants created extremely challenging or impossible game levels that frustrated other players.
+
+DEVELOP THIS OR MOVE
+They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001].
+
+Once concepts like safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, either from documentation, home gaming knowledge or genuine innovation,  it became available for propagation for take up by other participants.
+
+
+
+In Vignette 1B, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels onto yours?"_ The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
+
 
 
 #### Emergent social and cultural activities in evolving idioculture
 
-**Community concepts and norming behaviour**
-
-MOVE BACK TO CHAPTER 7 IF NO SPACE?
-
-NOTE THERE IS SOMETHING HERE ABOUT ME STEPPING BACK AND LETTING THE COMMUNITY EVOLVE.
+<!-- NOTE MOVE BACK TO CHAPTER 7 IF NO SPACE? -->
 
 
+This section uses the term idioculture [@cole_design-based_2016], a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015], to examine the emergence of a  community culture. This section contains reflection on some of my own facilitation decisions be they more active decisions to share community behaviour or more passive decisions to step back and let the community evolve in its own way.
+WHY VALID HERE? HOW RELATED TO NEXT CHAPTER?
 
-The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture [@cole_design-based_2016]: a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015].
+**Responsive not instructive**
 
+As explore previously in Ch.5 (CHECK), I had tried to avoid the use of of a principle first instruction approach either to the whole group or to individuals. The use of documentation followed just in time principles or was not needed as participants engaged in peer learning.
+
+Some individuals really appreciated the detailed documentation.
+
+**Peripheral activities**
+
+This chapter has demonstrated that these behaviours could be undertaken in many ways, including those requiring little commitment.
+
+this form of activity can be seen as legitimate peripheral participation (EXPLAIN?) [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpfuls practice contributing to the emerging ecosystem of the learning community.
+
+Observation on T's part, still legitimate
+
+For example, even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting,
+
+
+**evolving culture of playfulness**
+
+Introduced by myself in games at the start. And by encouraging regular playtesting
 
 For many younger participants, playful interactions can be seen a a leading activity, or a primary motivation.
 The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design.
 
 The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies.
 
-The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype]. Thus, I now explore the tools, process and the community in this study mutually encourage an flexible approach often referred to as _jamming_. As explored in Chapter 2 existing research suggests that Game Jams can be profitably used in education contexts [@aurava_game_2021], although there is no agreement on the characteristics game jam pedagogy, and scant guidance on how to address potentially problematic issues (list these),
+Playtesting explored in more detail in relation to agency development to anwser RQ3 in Chapter 7.
+
+
+**Social behaviour in playtesting**
+
+Non gaming aspects emerged. As per normal, but still significant.
+
+The work of the student helpers is valid here.
+
+M in very social positive comments on how cute characters looked.
+
+Comments on home ed opportunities,
+
+More general talk on the complexity of programming and the and
+
+The culture or hardness merits a separate section.
+
+**Moved section on norms**
+
+There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players. The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette.challenge outlines a key interaction which demonstrates norming behaviour towards Madiha(p) who has concentrated on the graphics of her game to the detriment of the level of challenges. In particular, the controls of the game are frustrating. The vignette shows varied attempts to influence Madiha to change the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Madiha directly to change the game, these comments appear to direct the direction of the design to comply with an emerging community norm of how a player jumps should feel, stemming from the participants' feedback on the feeling of lack of control over the player's character in the game. These behaviours are some of the informal norming behaviours that are less directive, seen in the work of Rogoff and colleagues, as explored in the literature review [@rogoff_cultural_2003].
+
+**The evolution of game play norms**
+
+Community norms began to develop, some of which were influenced by home experience of game playing. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game.
+
 Ed gives a more technical explanation from  involving the naming of the variable _jump speed_.
 
 Other children come and play the game but only for less than a minute before leaving. Towards the end of the playtesting process, as one child leaves, Molly comments "It's so frustrating." This suggests an evolving understanding that her game is frustrating to players rather than pleasantly challenging.
 
 The indirect norming behaviours described in appendix 5.Norm.x mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in  community settings.
 
-There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
 
-What we can draw from the data at this stage is that playtesing provides many leverage points to facilitating learner agency and discuss the limits of designs. IN addition, playtesting is a process that allows participants to demonstrate informed criticality as a player and guide the creations of peers via gameplay feedback.
+LINK
+These examples are emerging process where cultural concepts are mutually constituted by different actors involved in the game making activity system. While the concepts of hardness and challenge that emerge and not concrete examples of GDPS, they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency.
 
-This process is an example of an emerging process where cultural concepts are mutually constituted by all actors involved in the game making activity system. While the concepts of hardness and challenge that emerge and not concrete examples of GDPS, they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency.
 
 **A tension in use of norming practices and participant choice?**
+
+KEEP , DEVELOP OR MOVE
+There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
+
 However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective according to Rogoff, as a productive nudge to get real.
  IS THIS EXPLORED IN THE NEXT CHAPTER?
-
-This chapter has demonstrated that these behaviours could be undertaken in many ways, including those requiring little commitment. For example, even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation (EXPLAIN?) [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystem of the learning community.
-
 
 
 ## Discussion
