Moving things around checking the problem statement of the LR

--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -627,7 +627,8 @@ The MDA framework can be profitably examined from the perspective of superficial
 
 DVELOP THIS A BIT OR LINK TO ANOTHER BIT EXPLORING THIS
 
-![Illustration 6.x - MDA as an additional framework promoting multiple means of engagement  ](./Pictures/ch_6_mda_dia_1.png){width=85%}
+
+![Illustration 6.x -  MDA as an additional framework promoting multiple means of engagement - mapped to an grouping of GDPs  ](./Pictures/ch_6_mda_dia_2.png){width=95%}
 
 
 These findings align with existing constructivist research which highlight the motivating potential of incorporating home interests in games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]; @kafai_constructionist_2015, and socio-cultural research on the tactical use of FoK to overcome barriers to technical environments [@gutierrez_learning_2019-1; @moje2001maestro]. While existing work on computational design patterns by Repenning et al.  [@repenning_scalable_2015] addresses the value of progressive scaffolding to support the engagement of learners, it does not address any aspect of choice when of drawing on FoK when creating games.
